fix: adjust language button alignment and positioning

--- a/src/widgets/Header/ui/DropDown/DropDown.module.css
+++ b/src/widgets/Header/ui/DropDown/DropDown.module.css
@@ -122,16 +122,21 @@
   padding: 16px 20px;
   display: flex;
   flex-direction: row;
-  align-content: center;
-  gap: 10px;
+  gap: 6px;
   background: rgba(23, 30, 47);
   border: 1px solid rgba(44, 59, 94, 1);
   box-sizing: border-box;
 }
 
-.imageFlag {
+.image {
   width: 22px;
-  object-fit: contain;
+}
+
+.imageFlag {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
 }
 
 .box {
@@ -175,12 +180,12 @@
 
   .dropDownBoxFlags {
     margin: 8px 0 0;
-    justify-content: center;
+    justify-content: flex-start;
     background: rgba(18, 24, 38, 1);
     border: none;
     min-width: 327px;
     max-width: 327px;
-    padding: 12px 0;
+    padding: 12px 0 12px 106px;
   }
 
   .gearWheel {
